# VexV5

./: .clang-format  .gitignore  CMakeLists.txt  CMakeOptions.txt  Makefile  Ports.cmake  README.md  common.mk  project.pros  toolchain-gcc.cmake  toolchain-llvm.cmake  toolchain.cmake  upload.bat  upload.sh
.github/workflows/: build.yml
firmware/: v5-common.ld
include/: attributes.hpp  config.hpp  configuration.hpp  constants.hpp  controller.hpp  debug.hpp  drivetrain.hpp  error.hpp  filesystem.hpp  flywheel.hpp  format.hpp  logger.hpp  main.h  main.hpp  opcontroller.hpp  recording.hpp  replay.hpp  reset.hpp  robot.hpp  robot_debug.hpp  screen.hpp  serial_plugins.hpp  tasks.hpp  units.hpp  util.hpp
include/base85/: base85.h  base85.hpp
include/control/autonomous/: autonomous.hpp  left_score.hpp  left_winpoint.hpp  none.hpp  replay.hpp  right_score.hpp  right_winpoint.hpp  skills.hpp
include/control/input/: autonomous_outline.hpp  autonomous_recording.hpp  controller.hpp  operator.hpp  raw_recording.hpp  raw_replay.hpp
include/control/operator/: autonomous_recording.hpp  controller.hpp  operator.hpp  raw_recording.hpp  raw_replay.hpp
include/debug/: error.hpp  logger.hpp
include/fs/: filesystem.hpp
include/pros/: adi.hpp  apix.h  motors.h  motors.hpp  rtos.h  rtos.hpp
include/rdata/: export.hpp
include/robot/: arm.hpp  attributes.hpp  catapult.hpp  claw.hpp  drivetrain.hpp  expansion.hpp  flywheel.hpp  indexer.hpp  intake.hpp  robot.hpp  roller.hpp  updatable.hpp  wings.hpp
include/robot/autonomous/: autonomous.hpp  both_rollers.hpp  left_score.hpp  left_skills.hpp  left_winpoint.hpp  manual_load_skills.hpp  none.hpp  replay.hpp  right_score.hpp  right_skills.hpp  right_winpoint.hpp  skills.hpp
include/robot/controller/: autonomous_recording.hpp  controller.hpp  operator.hpp  raw_recording.hpp  raw_replay.hpp  recording.hpp  replay.hpp
include/robot/device/: device.hpp  gyro.hpp  inertial.hpp  motor.hpp  optical.hpp  pid.hpp  pneumatics.hpp  rotation.hpp
include/robot/pid/: pid.hpp  pid_controller.hpp  tbh.hpp  velocity_pid.hpp  vex_pid.hpp
include/screen/: autonomous_select.hpp  banner.hpp  chart.hpp  colour.hpp  config.hpp  config_screen.hpp  drivetrain_chart.hpp  flywheel_chart.hpp  graph.hpp  info.hpp  information.hpp  logging.hpp  logs.hpp  lvgl_util.hpp  pid_tuning.hpp  screen.hpp  serial_screen.hpp
include/serial/: remote_bot_connection.hpp  robot_command.hpp  robot_state.hpp  serial.hpp  serial_connection.hpp  serial_plugins.hpp
include/seriallink/: plugins.hpp  seriallink.hpp
include/structure/: concept.hpp  fixed_queue.hpp
include/vexv5/: autonomous.hpp  debug.hpp  filesystem.hpp  globals.hpp  opcontrol.hpp  recording.hpp  replay.hpp  reset.hpp  robot.hpp  switches.hpp
src/: autonomous.cpp  autonomous.hpp  configuration.cpp  constants.hpp  debug.cpp  debug.hpp  definitions.hpp  devices.hpp  drivetrain.cpp  error.cpp  error.hpp  filesystem.cpp  filesystem.hpp  flywheel.cpp  logger.cpp  logger.hpp  main.cpp  main.hpp  opcontrol.cpp  opcontrol.hpp  opcontroller.cpp  recording.cpp  recording.hpp  replay.cpp  replay.hpp  reset.cpp  reset.hpp  robot.cpp  robot.hpp  robot_debug.cpp  robot_debug.hpp  screen.cpp  screen.h  screen.hpp  serial_plugins.cpp  switches.cpp  tasks.cpp  units.hpp  util.cpp  util.hpp
src/config/: a.cpp  b.cpp  ports.hpp  tuning.hpp
src/control/: pid.cpp
src/control/autonomous/: autonomous.cpp  left_score.cpp  left_winpoint.cpp  none.cpp  replay.cpp  right_score.cpp  right_winpoint.cpp  score.cpp  score.hpp  skills.cpp  winpoint.cpp  winpoint.hpp
src/control/input/: autonomous_outline.cpp  autonomous_recording.cpp  controller.cpp  controller.hpp  operator.cpp  raw_recording.cpp  raw_replay.cpp
src/control/operator/: autonomous_recording.cpp  operator.cpp  raw_recording.cpp  raw_replay.cpp
src/debug/: error.cpp  error.hpp  logger.cpp
src/fs/: filesystem.cpp
src/robot/: arm.cpp  catapult.cpp  catapult.hpp  claw.cpp  drivetrain.cpp  drivetrain.hpp  expansion.cpp  flywheel.cpp  indexer.cpp  intake.cpp  intake.hpp  robot.cpp  robot.hpp  roller.cpp  wings.cpp
src/robot/autonomous/: autonomous.cpp  both_rollers.cpp  left_score.cpp  left_skills.cpp  left_winpoint.cpp  manual_load_skills.cpp  none.cpp  replay.cpp  right_score.cpp  right_skills.cpp  right_winpoint.cpp  skills.cpp
src/robot/controller/: autonomous_recording.cpp  operator.cpp  raw_recording.cpp  raw_replay.cpp  recording.cpp  replay.cpp
src/robot/device/: device.cpp  device.hpp  gyro.cpp  inertial.cpp  inertial.hpp  motor.cpp  optical.cpp  pid.cpp  pid.hpp  pneumatics.cpp  rotation.cpp  rotation.hpp
src/robot/pid/: tbh.cpp  velocity_pid.cpp  vex.cpp  vex_pid.cpp
src/screen/: autonomous_select.cpp  banner.cpp  chart.cpp  chart.hpp  config.cpp  config_screen.cpp  drivetrain_chart.cpp  flywheel_chart.cpp  info.cpp  information.cpp  information.hpp  logs.cpp  lvgl_util.cpp  pid_tuning.cpp  pid_tuning.hpp  screen.cpp  screen.hpp  serial_screen.cpp
src/serial/: remote_bot_connection.cpp  robot_command.cpp  robot_state.cpp  serial.cpp  serial_connection.cpp  serial_plugins.cpp
src/seriallink/: plugins.cpp  seriallink.cpp
src/structure/: fixed_queue.hpp
